[package]
name = "tikv-client-proto"
version = "0.0.0"
edition = "2018"
build = "build.rs"

[build-dependencies]
protobuf-build = { version = "0.11", default-features = false, features = ["grpcio-prost-codec"] }

[dependencies]
protobuf = "*"
prost = { version = "0.6" }
prost-derive = { version = "0.6" }
futures = "0.3.5"
grpcio = { git = "https://github.com/tikv/grpc-rs", features = [ "secure", "prost-codec" ], default-features=false }
lazy_static = { version = "1.3" }
